[package]
name = "orbuculum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "orbuculum-web"

[[bin]]
name = "orbuculum-rhai"

[dependencies]
env_logger = "0.10.0"
futures = "0.3.25"
hyper = "0.14.23"
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.18.0" }
lazy_static = "1.4.0"
log = "0.4.17"
orbuculum-nm = { version = "0.0.1", path = "crates/orbuculum-nm" }
orbuculum-grpc = { version = "0.0.1", path = "crates/orbuculum-grpc" }
orbuculum-rules = { version = "0.0.1", path = "crates/orbuculum-rules" }
tokio = { version = "1.23.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
udev = "0.7.0"
serde_json = "1.0.95"
axum = "0.6.12"
orbuculum-web = { version = "0.1.0", path = "crates/orbuculum-web" }
structopt = "0.3.26"
