[package]
name = "orbuculum-ctl"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
requestty = "0.5.0"
orbuculum-grpc = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
tonic = { workspace = true }
terminal = "0.2.1"
