[package]
name = "orbuculum-grpc"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = { workspace = true }
futures = { workspace = true }
glib = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
hyper = { workspace = true }
log = { workspace = true }
tonic = { workspace = true }
orbuculum-nm = { workspace = true }
orbuculum-rules = { workspace = true }
bytes = "1.4.0"
prost = "0.11.5"
tonic-reflection = "0.6.0"
tower = "0.4.13"

[build-dependencies]
tonic-build = "0.8"
