[package]
name = "orbuculum-nm"
version = "0.0.1"
edition = "2021"

[dependencies.glib-sys]
git = 'https://github.com/gtk-rs/gtk-rs-core'

[dependencies.gio]
git = 'https://github.com/gtk-rs/gtk-rs-core'

[dependencies.gio-sys]
git = 'https://github.com/gtk-rs/gtk-rs-core'

[dependencies.gobject-sys]
git = 'https://github.com/gtk-rs/gtk-rs-core'

[dev-dependencies]
rstest = "0.16.0"
serde_derive = "1.0.152"

[dependencies]
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.18.0" }
nm = { git = "https://github.com/balena-io-modules/libnm-rs.git", version = "0.4.0" }
eyre = "0.6.8"
tokio = { version = "1.23.0", features = ["full"] }
ipnet = "2.7.0"
libc = "0.2.139"
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
regex = "1.7.1"
ethtool = "0.2.4"
futures = "0.3.27"
