[package]
name = "orbuculum-nm"
version = "0.0.1"
edition = "2021"

[dependencies.glib-sys]
git = 'https://github.com/gtk-rs/gtk-rs-core'

[dependencies.gio]
git = 'https://github.com/gtk-rs/gtk-rs-core'

[dependencies.gio-sys]
git = 'https://github.com/gtk-rs/gtk-rs-core'

[dependencies.gobject-sys]
git = 'https://github.com/gtk-rs/gtk-rs-core'

[dev-dependencies]
rstest = { workspace = true }
temp_testdir = { workspace = true }
serde_derive = { workspace = true }

[dependencies]
glib = { workspace = true }
nm = { workspace = true }
eyre = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
ipnet = "2.7.0"
libc = "0.2.139"
regex = "1.7.1"
ethtool = "0.2.4"

[features]
v1_2 = ['nm/v1_2']
v1_4 = ['nm/v1_4', 'v1_2']
v1_6 = ['nm/v1_6', 'v1_4']
v1_8 = ['nm/v1_8', 'v1_6']
v1_10 = ['nm/v1_10', 'v1_8']
v1_12 = ['nm/v1_12', 'v1_10']
v1_14 = ['nm/v1_14', 'v1_12']
v1_16 = ['nm/v1_16', 'v1_14']
v1_18 = ['nm/v1_18', 'v1_16']
v1_20 = ['nm/v1_20', 'v1_18']
v1_22 = ['nm/v1_22', 'v1_20']
v1_24 = ['nm/v1_24', 'v1_22']
v1_26 = ['nm/v1_26', 'v1_24']
v1_28 = ['nm/v1_28', 'v1_26']
v1_30 = ['nm/v1_30', 'v1_28']
v1_32 = ['nm/v1_32', 'v1_30']
v1_34 = ['nm/v1_34', 'v1_32']
v1_36 = ['nm/v1_36', 'v1_34']
v1_38 = ['nm/v1_38', 'v1_36']
v1_40 = ['nm/v1_40', 'v1_38']
default = ['v1_40']
