[package]
name = "orbuculum-rules"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
rhai = { version = "1.13.0", features = ["serde"] }
serde_derive = "1.0.158"
serde_json = "1.0.94"
tokio = "1.26.0"

[dev-dependencies]
rstest = "0.17.0"
temp_testdir = "0.2.3"
