[package]
name = "orbuculum-rules"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhai = { version = "1.13.0", features = ["serde"] }
eyre = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
temp_testdir = { workspace = true }
serde_derive = { workspace = true }
